# ffdevel

./: .gitignore  CMakeClean.sh  CMakeLists.txt  FFDevel.cbp  FFDevel.files  FFDevel.includes  FFDevel.layout  UpdateGitVersion
share/ffdevel/forcefield/nbmodes/: ci_1s1s_ee_damp_ii.py  ci_1s1s_ee_damp_ij.py  ci_1s1s_ez_damp.py  do_1s1s_ii.py  do_1s1s_ij.py  wo_1s1s_ii.py  wo_1s1s_ij.py
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/ffdevel/: CMakeLists.txt  constants.f90  parallel.f90  parallel_dat.f90  sizes.f90  timers.F90  timers.f90  utils.f90  variables.f90  ver.f90
src/lib/ffdevel/dftd3/: api.f90  core.f90  dftd3.f90  mmd3.f90  mmd3_control.f90  mmd3_dat.f90
src/lib/ffdevel/forcefield/: disp.f90  disp_control.f90  disp_dat.f90  energy.f90  energy_prmgrd.f90  energy_utils.f90  exchrep.f90  geometry.f90  geometry_dat.f90  geometry_utils.f90  gradient.f90  gradient_utils.f90  hessian.f90  hessian_singular.f90  hessian_utils.f90  jacobian.f90  pauli.f90  pauli_control.f90  pauli_dat.f90  repulsion.f90  repulsion_dat.f90  repulsion_db.f90  topology.f90  topology_dat.f90  topology_utils.f90
src/lib/ffdevel/forcefield/nbmodes/: 12-6.f90  12-D3BJ.f90  12-DISPBJ.f90  12-XDMBJ.f90  EXP-D3BJ.f90  EXP-DISPBJ.f90  EXP-DISPTT.f90  EXP-XDMBJ.f90  EXPDO-DISPTT.f90  EXPWO-DISPTT.f90  INTEGRAL.f90  LJ.f90  PENE.f90  topology_bj.f90  topology_exp.f90  topology_ind.f90  topology_lj.f90  topology_pen.f90  topology_tt.f90
src/lib/ffdevel/optimizers/: ffopt.f90  ffopt_control.f90  ffopt_dat.f90  geoopt.f90  geoopt_control.f90  geoopt_dat.f90  shark-ml.cpp  shark-ml.hpp  shark-ml1.cpp  shark-ml1.hpp  shark-ml2.cpp  shark-ml2.hpp  shark-ml3.cpp  shark-ml3.hpp
src/lib/ffdevel/parameters/: atdens.f90  atdens_control.f90  atdens_dat.f90  atdens_db.f90  atomicdata.f90  atomicdata_control.f90  atomicdata_dat.f90  atomoverlap.f90  atomoverlap_control.f90  atomoverlap_dat.f90  buried.f90  buried_control.f90  buried_dat.f90  densoverlap.f90  densoverlap_control.f90  densoverlap_dat.f90  densoverlap_db.f90  nb2nb.f90  nb2nb_control.f90  nb2nb_dat.f90  parameters.f90  parameters_control.f90  parameters_dat.f90  repulsion_control.f90  targetset.f90  targetset_control.f90  targetset_dat.f90  xdm.f90  xdm_dat.f90
src/lib/ffdevel/parameters/data/: atomicdata_db.f90  atomoverlap_db.f90  densoverlap_db.f90  ip_db.f90
src/lib/ffdevel/parameters/errors/: aimr0.f90  aimr0_control.f90  aimr0_dat.f90  aimxdm.f90  aimxdm_control.f90  aimxdm_dat.f90  angles.f90  angles_control.f90  angles_dat.f90  bonds.f90  bonds_control.f90  bonds_dat.f90  chrgpnl.f90  chrgpnl_control.f90  chrgpnl_dat.f90  dihedrals.f90  dihedrals_control.f90  dihedrals_dat.f90  energy.f90  energy_control.f90  energy_dat.f90  errors.f90  errors_control.f90  errors_dat.f90  errors_utils.f90  freqs.f90  freqs_control.f90  freqs_dat.f90  ihess.f90  ihess_control.f90  ihess_dat.f90  impropers.f90  impropers_control.f90  impropers_dat.f90  mue.f90  mue_control.f90  mue_dat.f90  nbc6.f90  nbc6_control.f90  nbc6_dat.f90  (+39 more)
src/lib/numgrid/: CMakeLists.txt  numgrid_export.h
